styles for product page

--- a/alko-similar-client/public/index.html
+++ b/alko-similar-client/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alko similar recommender</title>
     <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mga7saz.css">
   </head>
   <body>
     <noscript>
