--- a/alko-similar-client/public/index.html
+++ b/alko-similar-client/public/index.html
@@ -6,6 +6,7 @@
     <title>Alko similar recommender</title>
     <link rel="stylesheet" type="text/css" href="app.css">
     <link rel="stylesheet" href="https://use.typekit.net/mga7saz.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   </head>
   <body>
     <noscript>
