--- a/alko-similar-client/public/index.html
+++ b/alko-similar-client/public/index.html
@@ -12,7 +12,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root" style="overflow-x:hidden;"></div>
     <script src="/js/main.js" type="text/javascript"></script>
   </body>
 </html>
